# microfuzz

./: .gitignore  .gitmodules  Microfuzz_Notes.txt  README.md
on_board/ESP32/components/fuzz/: CMakeLists.txt  allowlist.txt  blocklist.txt  coverage.S  fuzz.c  harness.c  time_bare.c  trace-pc-cb.c
on_board/ESP32/components/fuzz/include/: coverage.h  fuzz.h  harness.h  time_bare.h
on_board/ESP32/main/: CMakeLists.txt  ESP32.c
on_board/RP2040/code/: CMakeCache.txt  CMakeLists.txt  Makefile  allowlist.txt  cmake_install.cmake  compiler_comands.txt  output.map
on_board/RP2040/code/Core/Inc/: main.h  stm32f4xx_it.h  time_bare.h
on_board/RP2040/code/Core/Src/: main.c
on_board/RP2040/code/Core/Src/benchmarks/image_class/: tm_port.h
on_board/RP2040/code/Core/Src/benchmarks/jpeg_encode/: buf.c
on_board/RP2040/code/Core/Src/benchmarks/lorawan_down/: allowlist.txt
on_board/RP2040/code/Core/Src/benchmarks/lorawan_up/: lorawan_up_test.c
on_board/RP2040/code/Core/Src/benchmarks/lzfx_decomp/: allowlist.txt
on_board/RP2040/code/Core/Src/benchmarks/mp3_encode/: README
on_board/RP2040/code/Core/Src/benchmarks/susan_edges/: harness.c
on_board/RP2040/code/Core/Src/fuzz/: coverage.S  fuzz.c  time_bare.c
on_board/RP2040/code/Core/Startup/: startup_stm32f446retx.s
on_board/RP2040/code/Debug/Core/Src/: branch.su  stm32f4xx_it.su
on_board/RP2040/code/Drivers/CMSIS/Include/: core_cm4.h
on_board/RP2040/code/microfuzz/: .project  STM32F446RETX_RAM.ld  test.hex  trace-pc-guard-cb.c
on_board/RP2040/code/microfuzz/Core/Src/: coverage.S  main.c
on_board/RP2040/code/microfuzz/Debug/: microfuzz.elf  microfuzz.map
on_board/RP2040/code/microfuzz/Debug/Core/Src/: main.su  microfuzz_mem.cyclo
on_board/RP2040/code/pico-sdk/: Makefile  cmake_install.cmake
on_board/RP2040/code/pico-sdk/docs/: Makefile  cmake_install.cmake
on_board/RP2040/code/pico-sdk/src/: Makefile  cmake_install.cmake
on_board/RP2040/code/pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
on_board/RP2040/code/pico-sdk/src/common/boot_picoboot_headers/: Makefile  (+1 more)
on_board/RP2040/code/pico-sdk/tools/: Makefile  cmake_install.cmake
(+1959 files in other folders)
